--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
     "electron": "^22.0.0"
+  },
+  "publishConfig": {
+  "@pneumuh:registry": "https://npm.pkg.github.com"
   }
 }
